--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -1,8 +1,43 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Kaggle Titanic: Machine Learning from Disaster\n",
+    "\n",
+    "## MIT License\n",
+    "\n",
+    "### Copyright (c) 2020 Kunal Gehlot\n",
+    "\n",
+    "```\n",
+    "Permission is hereby granted, free of charge, to any person obtaining a copy\n",
+    "of this software and associated documentation files (the \"Software\"), to deal\n",
+    "in the Software without restriction, including without limitation the rights\n",
+    "to use, copy, modify, merge, publish, distribute, sublicense, and/or sell\n",
+    "copies of the Software, and to permit persons to whom the Software is\n",
+    "furnished to do so, subject to the following conditions:\n",
+    "\n",
+    "The above copyright notice and this permission notice shall be included in all\n",
+    "copies or substantial portions of the Software.\n",
+    "\n",
+    "THE SOFTWARE IS PROVIDED \"AS IS\", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR\n",
+    "IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,\n",
+    "FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE\n",
+    "AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER\n",
+    "LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,\n",
+    "OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE\n",
+    "SOFTWARE.\n",
+    "```\n",
+    "\n",
+    "### References:\n",
+    " - [Titanic Tutorial](https://www.kaggle.com/alexisbcook/titanic-tutorial)\n",
+    " - [Introduction to Ensembling/Stacking in Python](https://www.kaggle.com/arthurtok/introduction-to-ensembling-stacking-in-python)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -309,7 +344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -326,36 +361,32 @@
     "    ])\n",
     "\n",
     "ageVals.append(\n",
+    "    list(\n",
     "        np.random.randint(\n",
     "            ageVals[0][0] - ageVals[0][1], \n",
     "            ageVals[0][0] + ageVals[0][1], \n",
     "            size = train_df['Age'].isnull().sum()\n",
-    "            ).astype(int))\n",
+    "            )))\n",
     "\n",
     "ageVals.append(\n",
+    "    list(\n",
     "        np.random.randint(\n",
     "            ageVals[1][0] - ageVals[1][1], \n",
     "            ageVals[1][0] + ageVals[1][1], \n",
-    "            size = train_df['Age'].isnull().sum()\n",
-    "            ).astype(int))"
+    "            size = test_df['Age'].isnull().sum()\n",
+    "            )))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": "[[29.69911764705882, 14.526497332334044],\n [30.272590361445783, 14.18120923562442],\n array([37, 30, 29, 21, 23, 24, 20, 30, 37, 39, 38, 24, 31, 38, 18, 18, 33,\n        26, 30, 39, 37, 42, 21, 23, 27, 34, 18, 43, 16, 37, 26, 16, 22, 40,\n        22, 27, 39, 29, 18, 21, 43, 15, 25, 24, 34, 25, 16, 16, 37, 38, 40,\n        16, 38, 24, 43, 27, 38, 25, 34, 32, 38, 33, 23, 34, 39, 38, 22, 21,\n        35, 27, 23, 28, 22, 34, 36, 37, 20, 20, 24, 39, 35, 18, 20, 43, 35,\n        16, 38, 34, 30, 32, 19, 40, 37, 29, 23, 16, 34, 36, 24, 39, 36, 28,\n        15, 35, 30, 18, 20, 18, 33, 42, 33, 24, 27, 41, 17, 38, 29, 37, 20,\n        31, 32, 26, 40, 16, 25, 33, 16, 34, 16, 28, 18, 37, 18, 15, 21, 39,\n        25, 40, 27, 28, 16, 41, 28, 34, 23, 15, 20, 41, 18, 35, 30, 42, 15,\n        28, 22, 31, 22, 36, 26, 15, 43, 24, 27, 43, 15, 27, 31, 33, 29, 43,\n        17, 30, 32, 42, 37, 29, 41]),\n array([37, 41, 17, 32, 24, 18, 39, 31, 34, 40, 39, 42, 43, 33, 34, 29, 27,\n        43, 26, 19, 30, 21, 33, 35, 27, 29, 43, 21, 30, 40, 35, 20, 33, 32,\n        23, 35, 23, 31, 35, 31, 42, 39, 19, 37, 35, 30, 43, 32, 26, 30, 18,\n        38, 18, 43, 27, 24, 32, 42, 30, 23, 23, 26, 26, 29, 26, 37, 28, 23,\n        28, 25, 33, 29, 33, 43, 28, 23, 31, 43, 31, 34, 42, 29, 37, 43, 17,\n        24, 26, 25, 32, 27, 29, 37, 32, 27, 33, 26, 27, 30, 30, 25, 38, 24,\n        36, 42, 41, 34, 31, 18, 20, 31, 36, 22, 42, 19, 33, 18, 34, 20, 29,\n        29, 41, 27, 42, 43, 29, 34, 42, 18, 38, 21, 43, 22, 38, 34, 39, 25,\n        40, 21, 36, 40, 35, 24, 24, 37, 41, 34, 37, 32, 41, 32, 39, 21, 39,\n        27, 43, 38, 26, 41, 38, 29, 43, 23, 32, 38, 35, 29, 42, 32, 28, 41,\n        22, 36, 24, 42, 22, 38, 36], dtype=object)]"
-     },
-     "metadata": {},
-     "execution_count": 21
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ageVals"
+    "train_df['Age'][np.isnan(train_df['Age'])] = ageVals[2]\n",
+    "test_df['Age'][test_df['Age'].isnull()] = ageVals[3]\n",
+    "train_df['catAge'] = pd.cut(train_df['Age'], 8)\n",
+    "test_df['catAge'] = pd.cut(test_df['Age'], 8)"
    ]
   },
   {
