--- a/titanic.ipynb
+++ b/titanic.ipynb
@@ -667,7 +667,46 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "size_train = len(train_df)\n",
+    "size_test = len(test_df)\n",
+    "\n",
+    "forest_params = {\n",
+    "    'n_jobs': -1,\n",
+    "    'n_estimators': 500,\n",
+    "    'warm_start': True,\n",
+    "    'max_depth': 6,\n",
+    "    'min_samples_leaf': 2,\n",
+    "    'max_features': 'sqrt',\n",
+    "    'verbose': 1\n",
+    "    }\n",
+    "\n",
+    "extraTrees_params = {\n",
+    "    'n_jobs': -1,\n",
+    "    'n_estimators': 500,\n",
+    "    'max_depth': 8,\n",
+    "    'min_samples_leaf': 2,\n",
+    "    'verbose': 1\n",
+    "}\n",
+    "\n",
+    "adaBoost_params = {\n",
+    "    'n_estimators': 500,\n",
+    "    'learning_rate': 0.75,\n",
+    "    'verbose': 1\n",
+    "}\n",
+    "\n",
+    "gradBoost_params = {\n",
+    "    'n_estimators': 500, \n",
+    "    'max_depth': 5,\n",
+    "    'min_samples_leaf': 2,\n",
+    "    'verbose': 1\n",
+    "}\n",
+    "\n",
+    "svc_params  = {\n",
+    "    'kernel': linear,\n",
+    "    'C': 0.025,\n",
+    "}\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -726,12 +765,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7-final"
+   "version": "3.7.6-final"
   },
   "orig_nbformat": 2,
   "kernelspec": {
-   "name": "python37764bitbasecondaeed77ee39e754261bcd4f8a9f46679aa",
-   "display_name": "Python 3.7.7 64-bit ('base': conda)"
+   "name": "python37664bitmyenvconda9cf84808944e48fda05a69bab10897af",
+   "display_name": "Python 3.7.6 64-bit ('myenv': conda)"
   }
  },
  "nbformat": 4,
